--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -396,70 +396,70 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>5000</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>5000</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>100000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>unique</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>30</td>\n",
-       "      <td>4637</td>\n",
-       "      <td>1</td>\n",
+       "      <td>695</td>\n",
+       "      <td>90284</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>Earnings call Q1 2012</td>\n",
-       "      <td>Yes.</td>\n",
+       "      <td>Earnings call Q1 2015</td>\n",
+       "      <td>Thank you.</td>\n",
        "      <td>none</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>freq</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>402</td>\n",
-       "      <td>49</td>\n",
-       "      <td>5000</td>\n",
+       "      <td>2205</td>\n",
+       "      <td>1311</td>\n",
+       "      <td>99993</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>2014-04-14 20:12:53.760000+00:00</td>\n",
+       "      <td>2014-11-28 14:43:02.895599872+00:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>2007-07-26 03:01:00+00:00</td>\n",
+       "      <td>2005-11-23 05:04:00+00:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>2013-01-24 08:01:00+00:00</td>\n",
+       "      <td>2011-11-09 21:01:00+00:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>2014-01-23 14:44:00+00:00</td>\n",
+       "      <td>2015-01-28 16:15:00+00:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>2015-07-30 11:37:00+00:00</td>\n",
+       "      <td>2017-07-29 02:46:00+00:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>2022-07-27 21:01:00+00:00</td>\n",
+       "      <td>2023-01-18 17:01:00+00:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -469,54 +469,55 @@
        "</div>"
       ],
       "text/plain": [
-       "                                datetime        conference_name statement  \\\n",
-       "count                               5000                   5000      5000   \n",
-       "unique                               NaN                     30      4637   \n",
-       "top                                  NaN  Earnings call Q1 2012      Yes.   \n",
-       "freq                                 NaN                    402        49   \n",
-       "mean    2014-04-14 20:12:53.760000+00:00                    NaN       NaN   \n",
-       "min            2007-07-26 03:01:00+00:00                    NaN       NaN   \n",
-       "25%            2013-01-24 08:01:00+00:00                    NaN       NaN   \n",
-       "50%            2014-01-23 14:44:00+00:00                    NaN       NaN   \n",
-       "75%            2015-07-30 11:37:00+00:00                    NaN       NaN   \n",
-       "max            2022-07-27 21:01:00+00:00                    NaN       NaN   \n",
+       "                                   datetime        conference_name  \\\n",
+       "count                                100000                 100000   \n",
+       "unique                                  NaN                    695   \n",
+       "top                                     NaN  Earnings call Q1 2015   \n",
+       "freq                                    NaN                   2205   \n",
+       "mean    2014-11-28 14:43:02.895599872+00:00                    NaN   \n",
+       "min               2005-11-23 05:04:00+00:00                    NaN   \n",
+       "25%               2011-11-09 21:01:00+00:00                    NaN   \n",
+       "50%               2015-01-28 16:15:00+00:00                    NaN   \n",
+       "75%               2017-07-29 02:46:00+00:00                    NaN   \n",
+       "max               2023-01-18 17:01:00+00:00                    NaN   \n",
        "\n",
-       "       biodiversity  \n",
-       "count          5000  \n",
-       "unique            1  \n",
-       "top            none  \n",
-       "freq           5000  \n",
-       "mean            NaN  \n",
-       "min             NaN  \n",
-       "25%             NaN  \n",
-       "50%             NaN  \n",
-       "75%             NaN  \n",
-       "max             NaN  "
+       "         statement biodiversity  \n",
+       "count       100000       100000  \n",
+       "unique       90284            2  \n",
+       "top     Thank you.         none  \n",
+       "freq          1311        99993  \n",
+       "mean           NaN          NaN  \n",
+       "min            NaN          NaN  \n",
+       "25%            NaN          NaN  \n",
+       "50%            NaN          NaN  \n",
+       "75%            NaN          NaN  \n",
+       "max            NaN          NaN  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.describe()"
+    "df_.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "biodiversity\n",
-       "none    5000\n",
+       "none            99993\n",
+       "biodiversity        7\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,27 +756,6 @@
    ],
    "source": [
     "df.sort_values(by='datetime', ascending=False).head(20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m10000\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "df.head(10000)"
    ]
   },
   {
